src/test/ui/parser/keyword-move-as-identifier.stderr
error: expected pattern, found keyword `move`
  --> $DIR/keyword-move-as-identifier.rs:4:9
   |
LL |     let move = "foo"; //~ error: expected pattern, found keyword `move`
   |         ^^^^ expected pattern

error: aborting due to previous error

